add php5 to apache
Issue: convert_to_ansible

--- a/ops/ansible/deploy-server.yml
+++ b/ops/ansible/deploy-server.yml
@@ -6,6 +6,7 @@
   hosts: webservers
   roles:
     - apache_document_root
+    - apache_php
     - geerlingguy.apache
     - ANXS.mysql
     - darthwade.wordpress
