--- a/ops/ansible/group_vars/webservers.yml
+++ b/ops/ansible/group_vars/webservers.yml
@@ -11,6 +11,9 @@ apache_vhosts:
   - servername: "{{ apache_server_name }}"
     documentroot: "{{ apache_document_root }}"
 
+apache_mods_enabled:
+  - php5
+
 #
 # mysql
 #
