Add restart for apache2
Issue: convert_to_ansible

--- a/ops/ansible/deploy-server.yml
+++ b/ops/ansible/deploy-server.yml
@@ -5,8 +5,10 @@
 - name: deploying site
   hosts: webservers
   roles:
-    - apache_php
+    - php_requirements
     - geerlingguy.apache
     - ANXS.mysql
     - darthwade.wordpress
+  tasks:
+    - service: name=apache2 state=restarted
   sudo: True
