Typo in role name.
Issue: convert_to_ansible

--- a/ops/ansible/restore.yml
+++ b/ops/ansible/restore.yml
@@ -1,6 +1,7 @@
 ---
 
-- name: restoring mysql database
+- name: restoring wordpress site
   hosts: webservers
   roles:
-    - mysql-restore
+    - mysql_restore
+    - wordpress_restore
