Site restore needs unzip package and mod_rewrite.
Issue: convert_to_ansible

--- a/ops/ansible/roles/wordpress_restore/tasks/main.yml
+++ b/ops/ansible/roles/wordpress_restore/tasks/main.yml
@@ -1,6 +1,10 @@
 - name: create the directory in which to unarchive
   file: path=/tmp/{{ wordpress_unarchived_path }} state=directory
 
+- name: install the unzip packge
+  apt: pkg=unzip state=installed
+  sudo: True
+
 - name: upload and unpack wordpress backup archive
   unarchive: >
     src={{ wordpress_backup_archive }}
