Add the site name to wp-config.
Ensures permalinks have the correct hostname. Before this change everything
on vagrant.ocla.ca would point to ocla.ca.

Issue: convert_to_ansible

--- a/ops/ansible/deploy_server.yml
+++ b/ops/ansible/deploy_server.yml
@@ -9,6 +9,7 @@
     - geerlingguy.apache
     - ANXS.mysql
     - darthwade.wordpress
+    - wordpress_site_name
   tasks:
     - service: name=apache2 state=restarted
   sudo: True
