Cleanup data files after restore.
Issue: convert_to_ansible

--- a/ops/ansible/roles/mysql_restore/tasks/main.yml
+++ b/ops/ansible/roles/mysql_restore/tasks/main.yml
@@ -11,3 +11,8 @@
     login_user={{ ocla_db_user_name }}
     login_password={{ ocla_db_user_pass }}
     login_host="localhost"
+
+- name: remove dump file
+  file: path=/tmp/{{ mysql_dump_file | basename }} state=absent
+  sudo: True
+
