--- a/ops/ansible/roles/wordpress_restore/vars/main.yml
+++ b/ops/ansible/roles/wordpress_restore/vars/main.yml
@@ -1,1 +1,1 @@
-wordpress_unarchived_path: "{{ wordpress_backup_archive | basename }}"
+wordpress_unarchived_path: /tmp/{{ wordpress_backup_archive | basename }}
