--- a/ops/ansible/roles/wordpress_restore/tasks/main.yml
+++ b/ops/ansible/roles/wordpress_restore/tasks/main.yml
@@ -1,5 +1,5 @@
 - name: create the directory in which to unarchive
-  file: path=/tmp/{{ wordpress_unarchived_path }} state=directory
+  file: path={{ wordpress_unarchived_path }} state=directory
 
 - name: install the unzip packge
   apt: pkg=unzip state=installed
@@ -8,12 +8,16 @@
 - name: upload and unpack wordpress backup archive
   unarchive: >
     src={{ wordpress_backup_archive }}
-    dest=/tmp/{{ wordpress_unarchived_path }}
+    dest={{ wordpress_unarchived_path }}
 
 - name: restore wp-content/ directory
-  shell: /bin/cp -r /tmp/{{ wordpress_unarchived_path }}/wp-content/* {{ apache_document_root }}/wp-content/
+  shell: /bin/cp -r {{ wordpress_unarchived_path }}/wp-content/* {{ apache_document_root }}/wp-content/
   sudo: True
 
 - name: restore .htaccess file
-  shell: /bin/cp /tmp/{{ wordpress_unarchived_path }}/.htaccess {{ apache_document_root }}/.htaccess
+  shell: /bin/cp {{ wordpress_unarchived_path }}/.htaccess {{ apache_document_root }}/.htaccess
+  sudo: True
+
+- name: remove unarchived directory
+  file: path={{ wordpress_unarchived_path }} state=absent
   sudo: True
