Change play name.
Issue: convert_to_ansible

--- a/ops/ansible/deploy_server.yml
+++ b/ops/ansible/deploy_server.yml
@@ -2,7 +2,7 @@
 
 - include: ../ansible-common/deploy-base-server.yml
 
-- name: deploy site
+- name: deploy infrastructure requirements
   hosts: webservers
   roles:
     - php_requirements
