Playbook to create a backup and download to local.
Issue: convert_to_ansible

--- a/ops/ansible/restore_from_local.yml
+++ b/ops/ansible/restore_from_local.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: upload backup data
+- name: upload backup data to remote host
   hosts: webservers
   tasks:
     - name: create the remote backup restore directory
