--- a/ops/ansible.cfg
+++ b/ops/ansible.cfg
@@ -1,2 +1,2 @@
 [defaults]
-roles_path=ansible-common/roles:/usr/local/etc/ansible/roles/:/etc/ansible/roles/
+roles_path=/usr/local/etc/ansible/roles/:/etc/ansible/roles/:ansible-common/roles
