add apache_vhosts_overwite role to deploy script

--- a/ops/ansible/deploy_server.yml
+++ b/ops/ansible/deploy_server.yml
@@ -8,6 +8,7 @@
     - php_requirements
     - geerlingguy.apache
     - ANXS.mysql
+    - apache_vhosts_overwrite
   sudo: True
 
 - name: group servers which have wordpress installed
