add wordpress dir permissions role to deploy

--- a/ops/ansible/deploy_server.yml
+++ b/ops/ansible/deploy_server.yml
@@ -25,6 +25,7 @@
   roles:
     - darthwade.wordpress
     - wordpress_site_name
+    - wordpress_directory_permissions
   sudo: True
 
 - name: restart apache
