--- a/ops/ansible/deploy_server.yml
+++ b/ops/ansible/deploy_server.yml
@@ -9,6 +9,7 @@
     - geerlingguy.apache
     - ANXS.mysql
     - apache_vhosts_overwrite
+    - apache_supervisor
   sudo: True
 
 - name: group servers which have wordpress installed
