--- a/ops/ansible/deploy_server.yml
+++ b/ops/ansible/deploy_server.yml
@@ -10,6 +10,7 @@
     - ANXS.mysql
     - apache_vhosts_overwrite
     - apache_supervisor
+    - mysql_max_connections
   sudo: True
 
 - name: group servers which have wordpress installed
