remove apache supervisor

--- a/ops/ansible/roles/apache_supervisor/tasks/main.yml
+++ b/ops/ansible/roles/apache_supervisor/tasks/main.yml
@@ -3,5 +3,5 @@
   sudo: True
 
 - name: have supervisor watch apache2
-  supervisorctl: name=apache2 state=absent
+  supervisorctl: name=apache2 state=present
   sudo: True
